# VEEPort-Espressif-ESP32-S3-DevKitC-1-N8R8

./: .gh.keep_binary  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  README.rst  RELEASE_NOTES.rst
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/: .project
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/coremark/: CMakeLists.txt  build.bat  build.sh  sdkconfig.defaults  set_local_env.bat.tpl  set_project_env.bat  set_project_env.sh
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/coremark/main/: CMakeLists.txt  coremark.c
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/microej/: CMakeLists.txt  README.rst  cco_async_select.properties  cco_bluetooth-esp-idf.properties  cco_bsp-microej-async-worker.properties  cco_esp_idf.properties  cco_fs-fatfs.properties  cco_net-bsd.properties  cco_osal-headers.properties  cco_security-mbedtls.properties  partitions_ota_systemview.csv  sdkconfig_no_ota_no_systemview  sdkconfig_ota_no_systemview  sdkconfig_ota_systemview
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/microej/main/: CMakeLists.txt  microej.c  project_include.cmake  rename-sections.py
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/microej/scripts/: RunAtFirstBSPCompile.bat  RunAtFirstBSPCompile.sh  SysView.bat  build.bat  build.sh  build_no_ota_no_systemview.bat  build_no_ota_no_systemview.sh  build_ota_systemview.bat  build_ota_systemview.sh  build_validation.bat  combine_binaries.py  gdbinit  run.bat  run.sh  set_project_env.bat  set_project_env.sh
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/unit_tests/: CMakeLists.txt  build.bat  build.sh  sdkconfig.defaults  set_local_env.bat.tpl  set_project_env.bat  set_project_env.sh
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-bsp/projects/unit_tests/main/: CMakeLists.txt  unit_tests.c
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/: .project  CHANGELOG.md  ESP32S3DevKitC1.platform  README.md  configuration.xml  module.ant  module.ivy  module.properties  override.module.ant
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/bsp/: bsp.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/device/: device.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/javaAPIs/bluetooth-2.1-api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/javaAPIs/device-1.1-api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-summary.html  overview-tree.html
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-bluetooth/: bluetooth-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-bluetooth-s3/: bluetooth-s3-net-init.xml  bluetooth-s3-stub-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-bsp-DevKitC1/: init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-device/: device-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-device-s3/: device-s3-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-esp_idf-impl/: esp_idf-impl-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/dropins/scripts/init-esp_idf-mock/: esp_idf-mock-init.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/frontpanel/: frontpanel.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/microui/: microui.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/core/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/ecom-wifi/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/fs/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/net/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/net/validation/: microej-testsuite-common.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/security/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/ssl/: config.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-configuration/testsuites/ssl/validation/: microej-testsuite-common.properties
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-fp/: .classpath  .project  module.ivy
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/: .project
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/: microej-testsuite-harness-jpf-emb.xml  module-bluetooth.ivy  module.ant
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/bluetooth/: README.md  microej-testsuite-common.properties  microej-testsuite-harness.xml
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/esp32/: .project  README.md  config.properties  module.ant  module.ivy  override.module.ant
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/esp32/ota/: .classpath  (+3 more)
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/fs/: .project  README.md  config.properties  module.ant  module.ivy  override.module.ant
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/net/: .project  README.md  config.properties  module.ant  module.ivy  override.module.ant
ESP32-S3-DevKitC1-Xtensa-FreeRTOS-validation/tests/ssl/: .project  README.md  config.properties  module.ant  module.ivy  override.module.ant
ESP32S3DevKitC1-Platform-GNUv112_xtensa-esp32s3-2.3.0/: .project
ESP32S3DevKitC1-Platform-GNUv112_xtensa-esp32s3-2.3.1/: .project
ESP32S3DevKitC1-Platform-GNUv112_xtensa-esp32s3-2.4.0/: .project
ESP32S3DevKitC1-Platform-GNUv112_xtensa-esp32s3-2.4.1/: .project
ESP32S3DevKitC1-Platform-GNUv112_xtensa-esp32s3-2.5.0/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-1.0.0/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-1.0.1/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-2.0.0/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-2.1.0/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-2.2.0/: .project
ESP32S3DevKitC1-Platform-GNUv82_xtensa-esp32s2-2.2.1/: .project
docs/zn_CH/: README_CN.rst
(+315 files in other folders)
